--- a/package.json
+++ b/package.json
@@ -5,21 +5,23 @@
   "main": "api.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/shemmjunior/open-street-map-demo.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Shemm Junior",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/shemmjunior/open-street-map-demo/issues"
   },
   "homepage": "https://github.com/shemmjunior/open-street-map-demo#readme",
-  "dependencies": {
-    "connect": "^3.7.0",
-    "serve-static": "^1.14.1"
+  "dependencies": {},
+  "devDependencies": {
+    "html-webpack-plugin": "^5.3.1",
+    "webpack": "^5.37.0",
+    "webpack-cli": "^4.7.0"
   }
 }
