--- a/brt-dar-es-salaam-routes/package.json
+++ b/brt-dar-es-salaam-routes/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "copy-webpack-plugin": "^9.0.0",
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2"
